Add storybook, settings and major styles

--- a/src/core.webapp/components/avatar/avatar.styl
+++ b/src/core.webapp/components/avatar/avatar.styl
@@ -1,12 +1,12 @@
 .briskhome-avatar
   display inline-block
   border-radius 50px
-  border 1px solid #eaeaea
-  overflow hidden
+  border 1px solid #B9B9B9
   height 42px
   width 42px
   background-color #f9d21c
   text-align center
+  margin 10px 0
   position relative
 
   &__image
@@ -22,5 +22,14 @@
     height 100%
     color white
     font-size x-large
-    line-height 175%
-    z-index 10
+    line-height 185%
+
+  &__online
+    position: absolute;
+    width: 12px;
+    left: 75%;
+    top: 75%;
+    border-radius: 50%;
+    height: 12px;
+    background-color: #64D095;
+    border: 1px solid #b9b9b9;
