--- a/src/core.webapp/app/app.styl
+++ b/src/core.webapp/app/app.styl
@@ -10,42 +10,37 @@ table, caption, tbody, tfoot, thead, tr, th, td,
 article, aside, canvas, details, embed,
 figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	background-color #fafafa
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
+time, mark, audio, video
+	margin 0
+	padding 0
+	border 0
+	font-size 100%
+	font inherit
+	vertical-align baseline
 
-////////////////
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section
+	display block
 
 body
-	font-family -apple-system, BlinkMacSystemFont, sans-serif
+	background-color #fafafa
+	line-height 1
+
+ol, ul
+	list-style none
+
+blockquote, q
+	quotes none
+
+blockquote:before, blockquote:after,
+q:before, q:after
+	content ''
+	content none
+
+table
+	border-collapse collapse
+	border-spacing 0
+
 
 section:not(#briskhome)
 	max-width 1024px
