--- a/src/core.webapp/components/card/card.styl
+++ b/src/core.webapp/components/card/card.styl
@@ -1,32 +1,35 @@
 .card
   display inline-block
   width 300px
+  background-color white
   border-radius 15px
-  // box-shadow 0 12px 16px 0px rgba(0, 0, 0, 0.2); //black 0 12 16 0
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 
   &__content
     border-top-left-radius 15px
     border-top-right-radius 15px
-    overflow hidden
     transition max-height 1s ease
 
     > img
       max-height 100%
       width 100%
+    
+    &_empty
+      display inline-block
+      margin 16px
+      // font-size 16px
 
   &__footer
     border-bottom-left-radius 16px
     border-bottom-right-radius 16px
     padding 16px
     position relative
-    background-color white
     overflow hidden
     border-top 1px solid #eaeaea
 
   &__title
     line-height 1.25
-    font-size 16px
+    // font-size 16px
     &+&
       margin-top 4px
     &_gray
@@ -41,7 +44,7 @@
     top 0
     right 0
     padding 28px 16px 28px 0
-    background-color white
+    // background-color white
     box-shadow -4px 0 4px 4px white
 
     &-link
