--- a/src/core.webapp/components/ui/title/title.styl
+++ b/src/core.webapp/components/ui/title/title.styl
@@ -1,11 +1,13 @@
 .briskhome-title
   &_large
-    font-size 48px
-    // font-weight 800
+    font-size 36px
+    font-weight 500
+    margin-top 36px
+    margin-bottom 24px
 
   &_medium
     font-size 26px
-    font-weight 800
+    font-weight 500
     margin-bottom 16px
 
   &_small
