--- a/src/core.webapp/components/ui/input/input.styl
+++ b/src/core.webapp/components/ui/input/input.styl
@@ -1,8 +1,21 @@
 .briskhome-label
   display block
   text-align left
-  margin-bottom 14px
+  margin-bottom 16px
   font-size 14px
+  position: relative;
+  transition border-color 0.25s ease
+
+  &_invalid
+    &:before 
+      position: absolute;
+      top: 15px;
+      right: 10px;
+      border: 4px solid #CF4B5D;
+      content: "";
+      transition border-color 0.25s ease
+    &:hover:before
+      border-color #b9b9b9
 
   &__caption
     margin 8px 20px 12px
@@ -17,11 +30,11 @@
   height 36px
   padding 0 16px 0 16px
   border 1px solid #eee;
-  border-radius 8px
+  border-radius 4px
   font-size 14px
   font-weight 200
   color #333 
-  
+
   transition border-color 0.25s ease
   
   &::-webkit-input-placeholder
