feat(core.webapp): login redux action

--- a/src/core.webapp/components/pages/login/login.styl
+++ b/src/core.webapp/components/pages/login/login.styl
@@ -1,6 +1,7 @@
 .briskhome-login
   position fixed
-  width 30%
+  width 360px
+  height 240px
   z-index 2
   margin-top 100px
   left calc(50% - 200px)
@@ -12,7 +13,7 @@
   text-align center
 
   &__image
-    margin 20px 0 30px
+    margin 14px 0 28px
     height 32px
 
   &__button
