--- a/src/core.webapp/components/ui/button/button.styl
+++ b/src/core.webapp/components/ui/button/button.styl
@@ -5,7 +5,7 @@
   border-radius 4px
   text-align center
   text-decoration none
-  padding 12px 20px
+  padding 12px 16px
   font-size 16px
   font-weight 500
   height 40px
@@ -30,6 +30,9 @@
 
   &_inline-block
     display inline-block
+    
+    &+&
+      margin-left 20px
 
   &_block
     display block
