style(core.webapp): format stylus files

--- a/src/core.webapp/app/styles/variables.styl
+++ b/src/core.webapp/app/styles/variables.styl
@@ -1,7 +1,6 @@
-$border-color = #eaeaea;
-$border-hover-color = #b9b9b9;
-$border-active-color = #b9b9b9;
-
-$disabled-bg-color = #efefef;
-$disabled-border-color = #b9b9b9;
-$disabled-text-color = #b9b9b9;
+$border-color = #eaeaea
+$border-hover-color = #b9b9b9
+$border-active-color = #b9b9b9
+$disabled-bg-color = #efefef
+$disabled-border-color = #b9b9b9
+$disabled-text-color = #b9b9b9
