--- a/src/core.webapp/components/ui/toggle/toggle.styl
+++ b/src/core.webapp/components/ui/toggle/toggle.styl
@@ -1,141 +1,121 @@
-.react-toggle {
-  touch-action: pan-x;
+.react-toggle
+  position relative
+  display inline-block
+  padding 0
+  border 0
+  background-color transparent
+  cursor pointer
+  touch-action pan-x
+  -webkit-touch-callout none
+  -webkit-user-select none
+  -khtml-user-select none
+  -moz-user-select none
+  -ms-user-select none
+  user-select none
+  -webkit-tap-highlight-color rgba(0, 0, 0, 0)
+  -webkit-tap-highlight-color transparent
 
-  display: inline-block;
-  position: relative;
-  cursor: pointer;
-  background-color: transparent;
-  border: 0;
-  padding: 0;
+.react-toggle-screenreader-only
+  position absolute
+  overflow hidden
+  clip rect(0 0 0 0)
+  width 1px
+  height 1px
+  margin -1px
+  padding 0
+  border 0
 
-  -webkit-touch-callout: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+.react-toggle--disabled
+  opacity 0.5
+  cursor not-allowed
+  transition opacity 0.25s
+  -webkit-transition opacity 0.25s
 
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  -webkit-tap-highlight-color: transparent;
-}
+.react-toggle-track
+  width 50px
+  height 24px
+  padding 0
+  border-radius 30px
+  background-color #b9b9b9
+  transition all 0.2s ease
+  -webkit-transition all 0.2s ease
+  -moz-transition all 0.2s ease
 
-.react-toggle-screenreader-only {
-  border: 0;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  margin: -1px;
-  overflow: hidden;
-  padding: 0;
-  position: absolute;
-  width: 1px;
-}
+.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track
+  background-color #b9b9b9 + 25%
 
-.react-toggle--disabled {
-  cursor: not-allowed;
-  opacity: 0.5;
-  -webkit-transition: opacity 0.25s;
-  transition: opacity 0.25s;
-}
+.react-toggle--checked .react-toggle-track
+  background-color #f9d21c
 
-.react-toggle-track {
-  width: 50px;
-  height: 24px;
-  padding: 0;
-  border-radius: 30px;
-  background-color: #b9b9b9;
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
+.react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track
+  background-color #f9d21c + 25%
 
-.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track {
-  background-color: #b9b9b9 + 25%;
-}
+.react-toggle-track-check
+  position absolute
+  top 0
+  bottom 0
+  left 8px
+  width 14px
+  height 10px
+  margin-top auto
+  margin-bottom auto
+  line-height 0
+  opacity 0
+  transition opacity 0.25s ease
+  -webkit-transition opacity 0.25s ease
+  -moz-transition opacity 0.25s ease
 
-.react-toggle--checked .react-toggle-track {
-  background-color: #f9d21c;
-}
+.react-toggle--checked .react-toggle-track-check
+  opacity 1
+  transition opacity 0.25s ease
+  -webkit-transition opacity 0.25s ease
+  -moz-transition opacity 0.25s ease
 
-.react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track {
-  background-color: #f9d21c + 25%;
-}
+.react-toggle-track-x
+  position absolute
+  top 0
+  right 10px
+  bottom 0
+  width 10px
+  height 10px
+  margin-top auto
+  margin-bottom auto
+  line-height 0
+  opacity 1
+  transition opacity 0.25s ease
+  -webkit-transition opacity 0.25s ease
+  -moz-transition opacity 0.25s ease
 
-.react-toggle-track-check {
-  position: absolute;
-  width: 14px;
-  height: 10px;
-  top: 0px;
-  bottom: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-  line-height: 0;
-  left: 8px;
-  opacity: 0;
-  -webkit-transition: opacity 0.25s ease;
-  -moz-transition: opacity 0.25s ease;
-  transition: opacity 0.25s ease;
-}
+.react-toggle--checked .react-toggle-track-x
+  opacity 0
 
-.react-toggle--checked .react-toggle-track-check {
-  opacity: 1;
-  -webkit-transition: opacity 0.25s ease;
-  -moz-transition: opacity 0.25s ease;
-  transition: opacity 0.25s ease;
-}
+.react-toggle-thumb
+  position absolute
+  top 1px
+  left 1px
+  box-sizing border-box
+  width 22px
+  height 22px
+  border 1px solid #b9b9b9
+  border-radius 50%
+  background-color #fafafa
+  transition all 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0
+  transition all 0.25s ease
+  -webkit-box-sizing border-box
+  -moz-box-sizing border-box
+  -webkit-transition all 0.25s ease
+  -moz-transition all 0.25s ease
 
-.react-toggle-track-x {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  top: 0px;
-  bottom: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-  line-height: 0;
-  right: 10px;
-  opacity: 1;
-  -webkit-transition: opacity 0.25s ease;
-  -moz-transition: opacity 0.25s ease;
-  transition: opacity 0.25s ease;
-}
+.react-toggle--checked .react-toggle-thumb
+  left 27px
+  border-color #f9d21c - 25%
 
-.react-toggle--checked .react-toggle-track-x {
-  opacity: 0;
-}
+.react-toggle--focus .react-toggle-thumb
+  box-shadow 0 0 2px 3px #0099E0
+  -webkit-box-shadow 0 0 3px 2px #0099E0
+  -moz-box-shadow 0 0 3px 2px #0099E0
 
-.react-toggle-thumb {
-  transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
-  position: absolute;
-  top: 1px;
-  left: 1px;
-  width: 22px;
-  height: 22px;
-  border: 1px solid #b9b9b9;
-  border-radius: 50%;
-  background-color: #fafafa;
-
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-
-  -webkit-transition: all 0.25s ease;
-  -moz-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-}
-
-.react-toggle--checked .react-toggle-thumb {
-  left: 27px;
-  border-color: #f9d21c - 25%;
-}
-
-.react-toggle--focus .react-toggle-thumb {
-  -webkit-box-shadow: 0px 0px 3px 2px #0099E0;
-  -moz-box-shadow: 0px 0px 3px 2px #0099E0;
-  box-shadow: 0px 0px 2px 3px #0099E0;
-}
-
-.react-toggle:active:not(.react-toggle--disabled) .react-toggle-thumb {
-  -webkit-box-shadow: 0px 0px 5px 5px #0099E0;
-  -moz-box-shadow: 0px 0px 5px 5px #0099E0;
-  box-shadow: 0px 0px 5px 5px #0099E0;
-}
+.react-toggle:active:not(.react-toggle--disabled) .react-toggle-thumb
+  box-shadow 0 0 5px 5px #0099E0
+  -webkit-box-shadow 0 0 5px 5px #0099E0
+  -moz-box-shadow 0 0 5px 5px #0099E0
