--- a/src/core.webapp/components/avatar/avatar.styl
+++ b/src/core.webapp/components/avatar/avatar.styl
@@ -1,21 +1,21 @@
 .briskhome-avatar
+  position relative
   display inline-block
-  border-radius 50px
-  border 1px solid #B9B9B9
-  height 42px
   width 42px
+  height 42px
+  margin 10px 0
+  border 1px solid #B9B9B9
+  border-radius 50px
   background-color #f9d21c
   text-align center
-  margin 10px 0
-  position relative
 
   &__image
-    height 100%
-    width 100%
     position absolute
     top 0
     left 0
     z-index 1
+    width 100%
+    height 100%
 
   &__name
     width 100%
@@ -25,11 +25,11 @@
     line-height 185%
 
   &__online
-    position: absolute;
-    width: 12px;
-    left: 75%;
-    top: 75%;
-    border-radius: 50%;
-    height: 12px;
-    background-color: #64D095;
-    border: 1px solid #b9b9b9;
+    position absolute
+    top 75%
+    left 75%
+    width 12px
+    height 12px
+    border 1px solid #b9b9b9
+    border-radius 50%
+    background-color #64D095
