--- a/src/core.webapp/components/hamburger/hamburger.styl
+++ b/src/core.webapp/components/hamburger/hamburger.styl
@@ -1,119 +1,94 @@
 // Settings
 // ==================================================
-hamburger-padding-x                       = 16px
-hamburger-padding-y                       = 16px
-hamburger-layer-width                     = 24px
-hamburger-layer-height                    = 3px
-hamburger-layer-spacing                   = 4px //6
-hamburger-layer-color                     = #f9d21d
-hamburger-layer-border-radius             = 2px //4px
-hamburger-hover-opacity                   = 0.7
-hamburger-hover-transition-duration       = 0.15s
-hamburger-hover-transition-timing-function: linear
+hamburger-padding-x = 16px
+hamburger-padding-y = 16px
+hamburger-layer-width = 24px
+hamburger-layer-height = 3px
+hamburger-layer-spacing = 4px // 6
+hamburger-layer-color = #f9d21d
+hamburger-layer-border-radius = 2px // 4px
+hamburger-hover-opacity = 0.7
+hamburger-hover-transition-duration = 0.15s
 
-// To use CSS filters as the hover effect instead of opacity,
-// set hamburger-hover-use-filter as true and
-// change the value of hamburger-hover-filter accordingly.
-hamburger-hover-use-filter= false
-hamburger-hover-filter    = opacity(50%)
-
-// Hamburger
-// ==================================================
-.hamburger {
-  padding: hamburger-padding-y hamburger-padding-x
-  display: block
-  cursor: pointer
-
-  transition-property: opacity, filter
-  transition-duration: hamburger-hover-transition-duration
-  transition-timing-function: hamburger-hover-transition-timing-function
-
+hamburger-hover-transition-timing-function: linear,
+hamburger-hover-use-filter= false,
+hamburger-hover-filter = opacity(50%),
+.hamburger
+  display block
+  overflow visible
+  margin 0
+  padding hamburger-padding-y hamburger-padding-x
+  border 0
+  background-color transparent
+  color inherit
+  text-transform none
   // Normalize (<button>)
-  font: inherit
-  color: inherit
-  text-transform: none
-  background-color: transparent
-  border: 0
-  margin: 0
-  overflow: visible
+  font inherit
+  cursor pointer
+  transition-timing-function hamburger-hover-transition-timing-function
+  transition-duration hamburger-hover-transition-duration
+  transition-property opacity, filter
 
-  &:hover {
+  &:hover
     // if hamburger-hover-use-filter is true
-    filter: hamburger-hover-filter
+    filter hamburger-hover-filter
     // opacity: hamburger-hover-opacity
-  }
-}
 
-.hamburger-box {
-  width: hamburger-layer-width
-  height: hamburger-layer-height * 3 + hamburger-layer-spacing * 2
-  display: inline-block
-  position: relative
-}
+.hamburger-box
+  position relative
+  display inline-block
+  width hamburger-layer-width
+  height hamburger-layer-height * 3 + hamburger-layer-spacing * 2
 
-.hamburger-inner {
-  display: block
+.hamburger-inner
+  display block
   // top: 50%
-  margin-top: hamburger-layer-height / -2
+  margin-top hamburger-layer-height / -2
 
   &,
   &::before,
-  &::after {
-    width: hamburger-layer-width
-    height: hamburger-layer-height
-    background-color: hamburger-layer-color
-    border-radius: hamburger-layer-border-radius
-    position: absolute
-    transition-property: transform
-    transition-duration: 0.15s
-    transition-timing-function: ease
-  }
+  &::after
+    position absolute
+    width hamburger-layer-width
+    height hamburger-layer-height
+    border-radius hamburger-layer-border-radius
+    background-color hamburger-layer-color
+    transition-timing-function ease
+    transition-duration 0.15s
+    transition-property transform
 
   &::before,
-  &::after {
-    content: ""
-    display: block
-  }
+  &::after
+    display block
+    content ''
 
-  &::before {
-    top: (hamburger-layer-spacing + hamburger-layer-height) * -1
-  }
+  &::before
+    top (hamburger-layer-spacing + hamburger-layer-height) * -1
 
-  &::after {
-    bottom: (hamburger-layer-spacing + hamburger-layer-height) * -1
-  }
-}
+  &::after
+    bottom (hamburger-layer-spacing + hamburger-layer-height) * -1
 
- /*
-  * 3DX
-  */
-.hamburger--3dx {
-  .hamburger-box {
-    perspective: hamburger-layer-width * 2
-  }
+/*
+ * 3DX
+ */
+.hamburger--3dx
+  .hamburger-box
+    perspective hamburger-layer-width * 2
 
-  .hamburger-inner {
-    transition: transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1),
-                background-color 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
+  .hamburger-inner
+    transition transform 0.15s cubic-bezier(0.645, 0.045, 0.355, 1), background-color 0 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
 
     &::before,
-    &::after {
-      transition: transform 0s 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
-    }
-  }
+    &::after
+      transition transform 0 0.1s cubic-bezier(0.645, 0.045, 0.355, 1)
 
-  &.is-active {
-    .hamburger-inner {
-      background-color: transparent
-      transform: rotateY(180deg)
+  &.is-active
+    .hamburger-inner
+      background-color transparent
+      transform rotateY(180deg)
 
-      &::before {
-        transform: translate3d(0, hamburger-layer-height + hamburger-layer-spacing, 0) rotate(45deg)
-      }
+      &::before
+        transform translate3d(0, hamburger-layer-height + hamburger-layer-spacing, 0) rotate(45deg)
 
-      &::after {
-        transform: translate3d(0, (hamburger-layer-height + hamburger-layer-spacing) * -1, 0) rotate(-45deg)
-      }
-    }
-  }
-}
+      &::after
+        transform translate3d(0, (hamburger-layer-height + hamburger-layer-spacing) * -1, 0) rotate(-45deg)
