--- a/src/core.webapp/components/navigation/navigation.styl
+++ b/src/core.webapp/components/navigation/navigation.styl
@@ -1,14 +1,14 @@
 header
-  box-shadow 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24)
   background-color white
+  box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
 
   nav
     display block
-    text-align center
     display flex
     max-width 1024px
     max-height 64px
     margin auto
+    text-align center
 
     > button
       flex 1 auto
@@ -26,46 +26,46 @@ header
       list-style none
 
       > li
-        display:inline-flex
+        display inline-flex
 
         > a
+          padding 24px 16px
           color black
-          font-weight 500
           text-decoration none
-          padding 24px 16px 24px
+          font-weight 500
 
           &.active
             border-bottom 3px solid #F9D21C
-      
+
     .briskhome-menu__content
       top 50px
       right -10px
 
     .profile
+      display flex
       margin-left auto
       font-weight 500
       cursor pointer
-      display flex
-      // padding 24px 0
 
+      // padding 24px 0
       &__arrow
+        display inline-block
+        margin-bottom 2px
+        margin-left 8px
+        padding 3px
         border solid #b9b9b9
         border-width 0 2px 2px 0
-        display inline-block
-        padding 3px
         transform rotate(45deg)
-        margin-left 8px
-        margin-bottom 2px
 
       .briskhome-avatar
         display inline-block
-        border-radius 50px
-        border 1px solid #b9b9b9
-        vertical-align middle
-        height 42px
         width 42px
+        height 42px
+        border 1px solid #b9b9b9
+        border-radius 50px
+        vertical-align middle
 
       &__title
         display inline-block
-        vertical-align middle
         margin 24px 16px
+        vertical-align middle
