--- a/src/core.webapp/components/onboarding/onboarding.styl
+++ b/src/core.webapp/components/onboarding/onboarding.styl
@@ -1,48 +1,48 @@
 .onboarding
+  overflow hidden
   width 750px
   height 400px
   margin 0 auto
   border-radius 16px
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-  overflow hidden
-  
+  box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
+
   &__content
-    height 100%
     width 100%
+    height 100%
 
     &_left,
     &_right
       display inline-block
+      box-sizing border-box
       width 50%
       height 100%
       padding 20px
       text-align center
-      box-sizing border-box
-      
+
     &_left
-      background #EFEFEF
       float left
-      
+      background #EFEFEF
+
     &_right
-      background white
       float right
-    
+      background white
+
   &-title
     &_medium
       margin-top 40px
       margin-bottom 40px
 
   &-paragraph
-    line-height 150%
     color #b9b9b9
     font-weight 300
-      
+    line-height 150%
+
   &-dropdown.briskhome-dropdown-root
     margin-bottom 35px
-    
+
   &-input
     margin-bottom 10px
-      
+
 .briskhome-form
-  margin 0 auto
   width 300px
+  margin 0 auto
