--- a/src/core.webapp/components/pages/welcome/index.styl
+++ b/src/core.webapp/components/pages/welcome/index.styl
@@ -1,25 +1,25 @@
 .briskhome-welcome
   position fixed
-  width 360px
-  z-index 2
-  margin-top 50px
   left calc(50% - 200px)
-  background-color #fff
+  z-index 2
+  width 360px
+  margin-top 50px
   padding 20px
   border 1px solid #efefef
-  box-shadow 0 2px 5px 0 rgba(0,0,0,0.05)
   border-radius 4px
+  background-color #fff
+  box-shadow 0 2px 5px 0 rgba(0, 0, 0, 0.05)
   text-align center
 
   &__image
-    margin-bottom 20px
-    height 128px
     width 128px
+    height 128px
+    margin-bottom 20px
 
   &__text
-    line-height 140%
     margin-bottom 20px
     font-weight 300
+    line-height 140%
 
     & + &
       margin-top -12px
