--- a/src/core.webapp/components/ui/checkbox/index.styl
+++ b/src/core.webapp/components/ui/checkbox/index.styl
@@ -1,14 +1,13 @@
-.briskhome-checkbox {
+.briskhome-checkbox
+  position relative
   margin 9px 0 10px 11px
   padding-left 30px
   cursor pointer
-  position relative
 
-  &__content {
+  &__content
     font-weight 300
-  }
 
-  &__input {
+  &__input
     position absolute
     left -999em
     visibility hidden
@@ -17,9 +16,8 @@
     height 0
     border 0
     background none
-  }
 
-  &:before {
+  &:before
     position absolute
     top 0
     left 0
@@ -32,10 +30,9 @@
     background white
     content ''
     transition border-color 0.15s ease, box-shadow 0.15s ease
-  }
 
-  &_checked {
-    &:before {
+  &_checked
+    &:before
       border 1px solid #f9d21c
       background #f9d21c
       color white
@@ -47,17 +44,12 @@
       font-size 16px
       line-height 140%
       speak none
-    }
-  }
 
-  &_disabled {
+  &_disabled
     color #333
     cursor not-allowed
 
-    &:before {
+    &:before
       border 1px solid #efefef
       background-color #efefef
       cursor not-allowed
-    }
-  }
-}
