--- a/src/core.webapp/components/ui/input/input.styl
+++ b/src/core.webapp/components/ui/input/input.styl
@@ -1,19 +1,20 @@
 .briskhome-label
+  position relative
   display block
-  text-align left
   margin-bottom 16px
+  text-align left
   font-size 14px
-  position: relative;
   transition border-color 0.25s ease
 
   &_invalid
-    &:before 
-      position: absolute;
-      top: 15px;
-      right: 10px;
-      border: 4px solid #CF4B5D;
-      content: "";
+    &:before
+      position absolute
+      top 15px
+      right 10px
+      border 4px solid #CF4B5D
+      content ''
       transition border-color 0.25s ease
+
     &:hover:before
       border-color #b9b9b9
 
@@ -28,30 +29,29 @@
   box-sizing border-box
   width 100%
   height 36px
-  padding 0 16px 0 16px
-  border 1px solid #eee;
+  padding 0 16px
+  border 1px solid #eee
   border-radius 4px
-  font-size 14px
+  color #333
   font-weight 200
-  color #333 
-
+  font-size 14px
   transition border-color 0.25s ease
-  
+
   &::-webkit-input-placeholder
     color #ccc
-  
+
   &:disabled,
   &_disabled
     background #efefef
-  
+
   &:active,
   &:focus,
   &:hover
     border-color #b9b9b9
-  
+
   &:focus
     outline none
-  
+
   &_invalid
     border 1px solid #CF4B5D
 
@@ -64,7 +64,8 @@
   from
     opacity 0
     transform rotateX(-60deg) translateY(-10px)
+
   to
     opacity 1
-    transform rotateX(0deg) translateY(0px)
+    transform rotateX(0) translateY(0)
     animation-fill-mode none
