--- a/src/core.webapp/components/navigation/navigation.styl
+++ b/src/core.webapp/components/navigation/navigation.styl
@@ -1,14 +1,11 @@
 header
+  border-bottom 1px solid #eeeeee
   background-color white
-  box-shadow 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24)
 
   nav
-    display block
     display flex
-    max-width 1024px
     max-height 64px
-    margin auto
-    text-align center
+    padding 0 40px
 
     > button
       flex 1 auto
@@ -47,7 +44,6 @@ header
       font-weight 500
       cursor pointer
 
-      // padding 24px 0
       &__arrow
         display inline-block
         margin-bottom 2px
