--- a/src/core.webapp/components/avatar/avatar.styl
+++ b/src/core.webapp/components/avatar/avatar.styl
@@ -4,9 +4,9 @@
   width 42px
   height 42px
   margin 10px 0
-  border 1px solid #B9B9B9
+  border 1px solid #b9b9b9
   border-radius 50px
-  background-color #f9d21c
+  background-color #fafafa
   text-align center
 
   &__image
@@ -20,9 +20,10 @@
   &__name
     width 100%
     height 100%
-    color white
-    font-size x-large
-    line-height 185%
+    color #333333
+    font-weight 400
+    font-size 1.25em
+    line-height 215%
 
   &__online
     position absolute
@@ -30,6 +31,6 @@
     left 75%
     width 12px
     height 12px
-    border 1px solid #b9b9b9
+    border 1px solid #fafafa
     border-radius 50%
     background-color #64D095
