feat(core.webapp): dashboard redesign

--- a/src/core.webapp/components/ui/icon/index.styl
+++ b/src/core.webapp/components/ui/icon/index.styl
@@ -2,6 +2,27 @@
   display inline-block
   vertical-align top
 
+  &__add
+    width 128px
+    height 128px
+    background-image url('/static/assets/img/bige15dce7177740da9833eeaa7a7447949.png')
+    background-size contain
+    background-repeat no-repeat
+
+  &__add-profiles
+    width 128px
+    height 128px
+    background-image url('/static/assets/img/big909a60b5d66f71b38884bacf71b7021d.png')
+    background-size contain
+    background-repeat no-repeat
+
+  &__bed
+    width 128px
+    height 128px
+    background-image url('/static/assets/img/big786c10a973876c5e0cd4b1fce685e4ab.png')
+    background-size contain
+    background-repeat no-repeat
+
   &__head
     width 128px
     height 128px
@@ -27,5 +48,12 @@
     width 128px
     height 128px
     background-image url('/static/assets/img/big811d1362d9f760b53be5bd8c15926d7f.png')
+    background-size contain
+    background-repeat no-repeat
+
+  &__plus
+    width 128px
+    height 128px
+    background-image url('/static/assets/img/bigc7f902bed4e1a31ea1d4dce164a4288d.png')
     background-size contain
     background-repeat no-repeat
