--- a/src/core.webapp/components/avatar/avatar.styl
+++ b/src/core.webapp/components/avatar/avatar.styl
@@ -1,10 +1,10 @@
 .briskhome-avatar
   position relative
-  display inline-block
+  display block
   width 42px
   height 42px
-  margin 10px 0
-  border 1px solid #b9b9b9
+  margin 10px auto
+  border 1px solid #eeeeee
   border-radius 50px
   background-color #fafafa
   text-align center
@@ -18,8 +18,8 @@
     height 100%
 
   &__name
-    width 100%
-    height 100%
+    width 42px
+    height 42px
     color #333333
     font-weight 400
     font-size 1.25em
