feat: grey button style

--- a/src/core.webapp/components/ui/button/button.styl
+++ b/src/core.webapp/components/ui/button/button.styl
@@ -11,6 +11,10 @@
   font-size 16px
   transition background-color 0.25s ease
 
+  &_grey
+    background-color #efefef
+    color #333
+
   &_yellow
     background-color #F9D21C
     color white
