feat: checkbox display options

--- a/src/core.webapp/components/ui/checkbox/index.styl
+++ b/src/core.webapp/components/ui/checkbox/index.styl
@@ -19,7 +19,7 @@
 
   &:before
     position absolute
-    top 0
+    top -4px
     left 0
     display block
     width 16px
@@ -53,3 +53,12 @@
       border 1px solid #efefef
       background-color #efefef
       cursor not-allowed
+
+  &_inline
+    display inline
+
+  &_inline-block
+    display inline-block
+
+  &_block
+    display block
