feat: updated user dashboard widget

--- a/src/core.webapp/components/pages/dashboard/widgets/userWidget/styles/users.styl
+++ b/src/core.webapp/components/pages/dashboard/widgets/userWidget/styles/users.styl
@@ -1,3 +1,60 @@
+.user-widget
+  &__row
+    &:hover
+      background-color #fafafa
+
+  &__cell
+    vertical-align middle
+
+    &:nth-child(1)
+      width 60px
+
+      .briskhome-avatar
+        margin 8px
+
+    &:nth-child(2)
+      width 100%
+      padding-left 4px
+
+    &:nth-child(3)
+      width 30px
+
+      .briskhome-menu
+        margin-right 10px
+
+        &__trigger
+          vertical-align middle
+
+    &-title
+      display block
+      margin-bottom 4px
+
+    &-subtitle
+      display block
+      color #999
+      font-weight 300
+      font-size 14px
+
+  &__modal
+    &-title
+      margin-bottom 24px !important
+
+    &-caption
+      margin-bottom 16px
+      text-align left
+      font-weight 300
+
+    &-form
+      font-size 14px
+
+    &-hr
+      margin 16px 0
+      border 1px solid #efefef
+
+    &-controls
+      margin-top 16px
+      text-align right
+
 .link
   text-decoration none
 
@@ -48,7 +105,7 @@
       // width 50%
 
     &_last
-      test-align right
+      text-align right
 
     &-title
       // font-size 16px
