--- a/src/core.webapp/components/avatar/avatar.styl
+++ b/src/core.webapp/components/avatar/avatar.styl
@@ -1,12 +1,12 @@
 .briskhome-avatar
   position relative
-  display inline-block
+  display block
   width 42px
   height 42px
-  margin 10px 0
-  border 1px solid #B9B9B9
+  margin 10px auto
+  border 1px solid #eeeeee
   border-radius 50px
-  background-color #f9d21c
+  background-color #fafafa
   text-align center
 
   &__image
@@ -18,11 +18,12 @@
     height 100%
 
   &__name
-    width 100%
-    height 100%
-    color white
-    font-size x-large
-    line-height 185%
+    width 42px
+    height 42px
+    color #333333
+    font-weight 400
+    font-size 1.25em
+    line-height 215%
 
   &__online
     position absolute
@@ -30,6 +31,6 @@
     left 75%
     width 12px
     height 12px
-    border 1px solid #b9b9b9
+    border 1px solid #fafafa
     border-radius 50%
     background-color #64D095
