--- a/src/core.webapp/components/pages/dashboard/widgets/userWidget/styles/modal.styl
+++ b/src/core.webapp/components/pages/dashboard/widgets/userWidget/styles/modal.styl
@@ -12,7 +12,6 @@
     border-radius 4px
     background-color #fff
     box-shadow 0 2px 5px 0 rgba(0, 0, 0, 0.05)
-    text-align center
 
   &__overlay
     position fixed
@@ -30,3 +29,7 @@
     &_open
       opacity 1
       transform rotateX(0)
+
+.ReactModal__Body--open
+  main
+    filter blur(5px)
